--- a/web/leaflet.html
+++ b/web/leaflet.html
@@ -7,6 +7,7 @@
     <style>
       html, body, #map { height: 100%; margin: 0; }
       #panel { position: absolute; top: 10px; right: 10px; background: #fff; padding: 8px; z-index: 1000; }
+      #panel input[type="range"] { width: 160px; }
     </style>
   </head>
   <body>
@@ -14,20 +15,28 @@
     <div id="panel">
       <button onclick="setLayer('ndvi')">NDVI</button>
       <button onclick="setLayer('ndwi')">NDWI</button>
+      <div>
+        Opacity: <input id="opacity" type="range" min="0" max="1" step="0.05" value="0.7" />
+      </div>
       <div id="info"></div>
     </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script>
-      const map = L.map('map').setView([15.4, 73.9], 10);
+      const map = L.map('map').setView([15.4, 73.9], 9);
       L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19 }).addTo(map);
       let overlay = null;
       function setLayer(name) {
         if (overlay) map.removeLayer(overlay);
-        overlay = L.tileLayer('http://localhost:8000/tiles/' + name + '/{z}/{x}/{y}.png', { maxZoom: 0, minZoom: 0 });
-        overlay.addTo(map);
+        overlay = L.tileLayer('/tiles/' + name + '/{z}/{x}/{y}.png', {
+          maxZoom: 19,
+          maxNativeZoom: 0,
+          opacity: parseFloat(document.getElementById('opacity').value)
+        }).addTo(map);
       }
       setLayer('ndvi');
+      document.getElementById('opacity').addEventListener('input', (e) => {
+        if (overlay) overlay.setOpacity(parseFloat(e.target.value));
+      });
     </script>
   </body>
   </html>
-
